add comment model
